--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,106 @@
-venv
-__pycache__
-*.pyc
-*.env
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environment
+venv/
+ENV/
+env/
+.venv/
+.pipenv/
+
+# Pyre type checker
+.pyre/
+
+# Pipenv
+Pipfile.lock
+
+# poetry
+poetry.lock
+
+# Pyright type checker
+pyrightconfig.json
+
+# pyenv
+.python-version
+
+# pytest
+.cache
+.pytest_cache/
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# VS Code
+.vscode/
+
+# Pycharm
+.idea/
+
+# Logs
+*.log
+
+# dotenv
+.env
+
+# LangChain-specific (optional)
+# These are common output files or artifacts when working with LangChain agents/tools
+*.db
+*.sqlite
+*.json
+*.yaml
+*.pkl
+*.faiss/
+*.lancedb/
+*.chroma/
+*.cache/
+cache/
+
+# Hugging Face / Transformers / Models
+*.bin
+*.ckpt
+*.pt
+*.onnx
+hub/
+models/
+tokenizer_config.json
+special_tokens_map.json
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.swp
+
+# MacOS
+.DS_Store
